Bug 370362 - Default user icon after installation differs from the one shown in user manager
Summary: Default user icon after installation differs from the one shown in user manager
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-09 17:51 UTC by Roman Gilg
Modified: 2017-02-01 12:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Gilg 2016-10-09 17:51:07 UTC
In Kicker is a two stroke circle + half-circle, while in user manager you have the blue-green one.

After selecting another avatar in user manager, the Kicker icon is also the the other one and it works from then on.

Reproducible: Always
Comment 1 David Edmundson 2016-10-09 19:04:41 UTC
Git commit 70c745d6147e465ce1e34b6037eb7dedb8e77f27 by David Edmundson.
Committed on 09/10/2016 at 19:04.
Pushed by davidedmundson into branch 'master'.

Load user avatars from AccountsServicePath if it exists

Plasma's UserManager (and Gnome) both now use AccountsService to store
user information.

AccountsService saves the account information, and more particularly the
avatar, in /var. This is very useful for login managers that need to
load them without having to deal with mounting remote or encrypted home
directories.

This patch makes KUser return the avatar saved by AccountsService first
if it exist.

REVIEW: 128951

M  +3    -0    src/lib/CMakeLists.txt
A  +1    -0    src/lib/util/config-accountsservice.h.cmake
M  +8    -1    src/lib/util/kuser_unix.cpp

http://commits.kde.org/kcoreaddons/70c745d6147e465ce1e34b6037eb7dedb8e77f27
Comment 2 Roman Gilg 2016-10-11 12:09:15 UTC
This commit alone doesn't work. I just updated my Neon Dev Unstable, where I haven't set a new avatar since installation. This means my /var/lib/AccountsService/icons directory is empty and there also is no ~/.face.icon.

The system needs to create the default icon in one of these two locations, if we want to provide the default icon right from the start.
Comment 3 David Edmundson 2017-02-01 12:45:32 UTC
Git commit 52ba0122ebeb6aa21d23936d0fbef20f7d9f208f by David Edmundson.
Committed on 01/02/2017 at 12:45.
Pushed by davidedmundson into branch 'Plasma/5.9'.

Use consistent default icon in UserManager and Kicker

Summary:
Both Kicker and UserManager when there is no icon set fallback to the
icon "user-identity". However because we basically maintain two distinct
icon themes for Plasma and not Plasma they ended up looking completely
different as in the bug report.

Reviewers: #plasma, hein

Reviewed By: #plasma, hein

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4249

M  +1    -0    applets/kickoff/package/contents/ui/Header.qml

https://commits.kde.org/plasma-desktop/52ba0122ebeb6aa21d23936d0fbef20f7d9f208f