Load user avatars from AccountsServicePath if it exists

Plasma's UserManager (and Gnome) both now use AccountsService to store
user information.

AccountsService saves the account information, and more particularly the
avatar, in /var. This is very useful for login managers that need to
load them without having to deal with mounting remote or encrypted home
directories.

This patch makes KUser return the avatar saved by AccountsService first
if it exist.

REVIEW: 128951
BUG: 370362